# pinchot-c-api

./: CMakeLists.txt  PinchotBuildApplication.cmake  PinchotBuildLibrary.cmake  PinchotSchema.cmake  PinchotSources.cmake  PinchotVersionInfo.cmake
examples/: jsScanApplication.hpp
examples/00-discover/: CMakeLists.txt
examples/00-discover/src/: discover.cpp
examples/01-configure-and-connect/: CMakeLists.txt
examples/01-configure-and-connect/src/: configure_and_connect.cpp
examples/02-basic-scanning/: CMakeLists.txt
examples/02-basic-scanning/src/: basic_scanning.cpp
examples/03-advanced-scanning/: CMakeLists.txt
examples/03-advanced-scanning/src/: advanced_scanning.cpp
examples/debug-benchmark-test/: CMakeLists.txt
examples/debug-benchmark-test/src/: benchmark_test.cpp
examples/debug-profile-capture/: CMakeLists.txt
examples/debug-profile-capture/src/: profile_capture.cpp
schema/: MessageClient_generated.h  MessageDiscoveryServer_generated.h  ScanHeadType_generated.h  js50_spec_bin.c  js50_spec_bin.h
src/: AlignmentParams.cpp  AlignmentParams.hpp  BroadcastDiscover.hpp  DataPacket.cpp  DataPacket.hpp  DatagramHeader.hpp  NetworkIncludes.hpp  NetworkInterface.cpp  NetworkInterface.hpp  NetworkTypes.hpp  PhaseTable.cpp  PhaseTable.hpp  ProfileBuilder.hpp  ScanHead.cpp  ScanHead.hpp  ScanManager.cpp  ScanManager.hpp  ScanWindow.cpp  ScanWindow.hpp  StatusMessage.hpp  TcpSerializationHelpers.hpp  Version.hpp  joescan_pinchot.cpp  joescan_pinchot.h  static_asserts.cpp
